[tool.poetry]
name = "e-commerce-chatbot"
version = "0.1.0"
description = ""
authors = ["AIEngineerOnDemand <giopantana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1,<3.11"
rasa = "^3.6.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"