[tool.poetry]
name = "cdd-data-extraction"
version = "0.1.0"
description = ""
authors = ["AIEngineerOnDemand <giopantana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.27.1"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
